[project]
name = "temporal_network_automation"
version = "0.1.0"
description = "A Temporal workflow for network automation tasks"
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]